# tiktokei

./: .gitignore  README.md  main.py  pyproject.toml
tests/: __init__.py  test_cli.py  test_core.py  test_new_features.py
tiktokei/: __init__.py  cli.py  core.py
