[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiktokei"
version = "0.2.0"
description = "A command-line tool to count tokens in text files using tiktoken (like tokei but for tokens)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Ang Chin Han", email = "ang.chin.han@gmail.com" },
]
keywords = ["tiktoken", "tokens", "text", "cli", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

dependencies = [
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tiktokei = "tiktokei.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/tiktokei"
Repository = "https://github.com/yourusername/tiktokei"
Issues = "https://github.com/yourusername/tiktokei/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
